--- a/BigNews/admin/index.html
+++ b/BigNews/admin/index.html
@@ -54,5 +54,39 @@
 
         </div>
     </div>
+    <script>
+        $(function () {
+            //  原生方法获取token
+            //     //(1).实例化ajax对象
+            //     var xhr = new XMLHttpRequest();
+            //     //(2).设置请求方法和地址
+            //     xhr.open('get', 'http://localhost:8080/api/v1/admin/user/info');
+            //     //(3).设置请求头（post请求才需要设置）
+            //     xhr.setRequestHeader('Authorization',localStorage.getItem('token'));
+            //     //(4).发送请求 ： 参数格式  'key=value' 
+            //     xhr.send();
+            //     //(5).注册回调函数
+            //     xhr.onload = function () {
+            //         console.log(xhr.responseText);
+            //     };
+            $.ajax({
+                url: 'http://localhost:8080/api/v1/admin/user/info',
+                type: 'get',
+                dataType: 'json',
+                success: function (backData) {
+                    console.log(backData);
+                    $('.user_info>img').attr('src',backData.data.userPic)
+                    $('.user_info>span').text(backData.data.nickname)
+                    $('.user_center_link>img').attr('src',backData.data.userPic)
+                }
+            });
+            $('.logout').click(function(){
+                localStorage.removeItem('token')
+                window.location.href='./login.html'
+            })
+            
+        })
+    </script>
 </body>
+
 </html>
