完成模态框添加

--- a/BigNews/admin/user.html
+++ b/BigNews/admin/user.html
@@ -68,6 +68,23 @@
             </form>
         </div>
     </div>
+    <script>
+        $(function(){
+            $.ajax({
+                url:'http://localhost:8080/api/v1/admin/user/detail',
+                type:'get',
+                dataType:'json',
+                success: function(backData){
+                    console.log(backData);
+                    $('#inputEmail1').val(backData.data.username)
+                    $('#inputEmail2').val(backData.data.nickname)
+                    $('#inputEmail3').val(backData.data.email)
+                    $('#inputEmail4').val(backData.data.password)
+                    $('.user_pic').attr('src',backData.data.userPic)
+                }
+            });
+        })
+    </script>
 </body>
 
 </html>
