--- a/BigNews/admin/login.html
+++ b/BigNews/admin/login.html
@@ -38,54 +38,74 @@
     </div>
   </div>
 
-
+  <!-- 模态框HTML -->
+  <div class="modal fade" tabindex="-1" role="dialog" id="myModal">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+              aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title">友情提示</h4>
+        </div>
+        <div class="modal-body">
+          <p>用户名或密码错误&hellip;</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-success" data-dismiss="modal">确认</button>
+        </div>
+      </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+  </div><!-- /.modal -->
   <script>
     // 入口函数
-    $(function(){
-       /*登录功能 
-      1.给登录按钮注册点击事件  （form表单中的按钮需要阻止默认行为）
-      2.获取用户输入的用户名和密码
-      3.非空判断
-      4.ajax发送请求
-      5.服务器响应数据
-        成功：跳转首页
-        失败：弹出提示用户
-      */
+    $(function () {
+      /*登录功能 
+     1.给登录按钮注册点击事件  （form表单中的按钮需要阻止默认行为）
+     2.获取用户输入的用户名和密码
+     3.非空判断
+     4.ajax发送请求
+     5.服务器响应数据
+       成功：跳转首页
+       失败：弹出提示用户
+     */
       // 1.给登录按钮注册点击事件  （form表单中的按钮需要阻止默认行为）
-      $('.input_sub').click(function(e){
+      $('.input_sub').click(function (e) {
         e.preventDefault()
-      // 2.获取用户输入的用户名和密码
-        var input_txt=$('.input_txt').val()
-        var input_pass=$('.input_pass').val()
-      // 3.非空判断
-      if(input_txt.length==0||input_pass.length==0){
-        alert('用户名和密码不能为空')
-        return
-      }else{
-      // 4.ajax发送请求
-        // 那么项目的基地址就是:http://localhost:8080/api/v1
-        // 基地址+端口+/api/vi
-        $.ajax({
-          url:'http://localhost:8080/api/v1/admin/user/login',
-          type:'post',
-          dataType:'json',
-          data:{
-            username:input_txt,
-            password:input_pass
-          },
-          success: function(backData){
-      // 5.服务器响应数据
-            console.log(backData);
-      //   失败：弹出提示用户
-            alert(backData.msg)
-            localStorage.setItem('token',backData.token)
-            if(backData.code==200){
-      //   成功：跳转首页
-              window.location.href='./index.html'
+        // 2.获取用户输入的用户名和密码
+        var input_txt = $('.input_txt').val()
+        var input_pass = $('.input_pass').val()
+        // 3.非空判断
+        if (input_txt.length == 0 || input_pass.length == 0) {
+          // alert('用户名和密码不能为空')
+          $('.modal-body>p').text('用户名和密码不能为空')
+          $('#myModal').modal()
+          return
+        } else {
+          // 4.ajax发送请求
+          // 那么项目的基地址就是:http://localhost:8080/api/v1
+          // 基地址+端口+/api/vi
+          $.ajax({
+            url: 'http://localhost:8080/api/v1/admin/user/login',
+            type: 'post',
+            dataType: 'json',
+            data: {
+              username: input_txt,
+              password: input_pass
+            },
+            success: function (backData) {
+              // 5.服务器响应数据
+              console.log(backData);
+              //   失败：弹出提示用户
+              $('.modal-body>p').text(backData.msg)
+              $('#myModal').modal()
+              localStorage.setItem('token', backData.token)
+              if (backData.code == 200) {
+                //   成功：跳转首页
+                window.location.href = './index.html'
+              }
             }
-          }
-        });
-      }
+          });
+        }
       })
     })
   </script>
