完成个人信息修改

--- a/BigNews/admin/login.html
+++ b/BigNews/admin/login.html
@@ -94,7 +94,7 @@
             },
             success: function (backData) {
               // 5.服务器响应数据
-              console.log(backData);
+              // console.log(backData);
               //   失败：弹出提示用户
               $('.modal-body>p').text(backData.msg)
               $('#myModal').modal()
