--- a/BigNews/admin/index.html
+++ b/BigNews/admin/index.html
@@ -74,17 +74,17 @@
                 type: 'get',
                 dataType: 'json',
                 success: function (backData) {
-                    console.log(backData);
-                    $('.user_info>img').attr('src',backData.data.userPic)
+                    // console.log(backData);
+                    $('.user_info>img').attr('src', backData.data.userPic)
                     $('.user_info>span').text(backData.data.nickname)
-                    $('.user_center_link>img').attr('src',backData.data.userPic)
+                    $('.user_center_link>img').attr('src', backData.data.userPic)
                 }
             });
-            $('.logout').click(function(){
+            $('.logout').click(function () {
                 localStorage.removeItem('token')
-                window.location.href='./login.html'
+                window.location.href = './login.html'
             })
-            
+
         })
     </script>
 </body>
