--- a/BigNews/admin/user.html
+++ b/BigNews/admin/user.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/iconfont.css">
     <link rel="stylesheet" href="css/main.css">
     <script src="./libs/jquery-1.12.4.min.js"></script>
-
+    <script src="./libs/bootstrap/js/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -68,21 +68,74 @@
             </form>
         </div>
     </div>
+
+    <!-- 模态框HTML -->
+    <div class="modal fade" tabindex="-1" role="dialog" id="myModal">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                            aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title">友情提示</h4>
+                </div>
+                <div class="modal-body">
+                    <p>用户名或密码错误&hellip;</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-success" data-dismiss="modal">确认</button>
+                </div>
+            </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
     <script>
-        $(function(){
+        $(function () {
             $.ajax({
-                url:'http://localhost:8080/api/v1/admin/user/detail',
-                type:'get',
-                dataType:'json',
-                success: function(backData){
-                    console.log(backData);
+                url: 'http://localhost:8080/api/v1/admin/user/detail',
+                type: 'get',
+                dataType: 'json',
+                success: function (backData) {
+                    // console.log(backData);
                     $('#inputEmail1').val(backData.data.username)
                     $('#inputEmail2').val(backData.data.nickname)
                     $('#inputEmail3').val(backData.data.email)
                     $('#inputEmail4').val(backData.data.password)
-                    $('.user_pic').attr('src',backData.data.userPic)
+                    $('.user_pic').attr('src', backData.data.userPic)
                 }
             });
+            // 文件预览
+            // (1)给表单注册onchange事件: 选择文件就会执行
+            $('#exampleInputFile').change(function () {
+                // (2)获取用户选择的文件: DOMthis.files[0]
+                var file = this.files[0]
+                console.log(file);
+                // (3)根据file文件生成url路径 (img标签src属性是url)
+                var url = URL.createObjectURL(file)
+                console.log(url);
+                // (4)设置img标签src属性生成的url
+                $('.user_pic').attr('src', url)
+            })
+            $('.btn-success').click(function (e) {
+                e.preventDefault()
+                var fd = new FormData($('form')[0]);
+                $.ajax({
+                    url: 'http://localhost:8080/api/v1/admin/user/edit',
+                    type: 'post',
+                    dataType: 'json',
+                    data: fd,
+                    processData: false,
+                    contentType: false,
+                    success: function (backData) {
+                        // console.log(backData);
+                        if (backData.code == 200) {
+                            $('#myModal').modal()
+                            $('.modal-body>p').text(backData.msg)
+                            $('#myModal').on('hidden.bs.modal', function (e) {
+                                window.location.href = './index.html'
+                            })
+                        }
+                    }
+                });
+            })
         })
     </script>
 </body>
