--- a/BigNews/admin/user.html
+++ b/BigNews/admin/user.html
@@ -87,10 +87,13 @@
             </div><!-- /.modal-content -->
         </div><!-- /.modal-dialog -->
     </div><!-- /.modal -->
+    <!-- 导入基地址 -->
+    <script src="./libs/hppt.js"></script>
     <script>
         $(function () {
             $.ajax({
-                url: 'http://localhost:8080/api/v1/admin/user/detail',
+                //用户详情
+                url:BigNew.user_detail,
                 type: 'get',
                 dataType: 'json',
                 success: function (backData) {
@@ -118,7 +121,8 @@
                 e.preventDefault()
                 var fd = new FormData($('form')[0]);
                 $.ajax({
-                    url: 'http://localhost:8080/api/v1/admin/user/edit',
+                    // 用户编辑
+                    url: BigNew.user_edit,
                     type: 'post',
                     dataType: 'json',
                     data: fd,
@@ -130,7 +134,11 @@
                             $('#myModal').modal()
                             $('.modal-body>p').text(backData.msg)
                             $('#myModal').on('hidden.bs.modal', function (e) {
-                                window.location.href = './index.html'
+                            /*注意点
+                            window: 当前页面 user.html,
+                            如果想要使用 window.parent,这种方法一般用于获取iframe标签的父窗口
+                            */
+                                window.parent.location.reload()
                             })
                         }
                     }
