--- a/BigNews/admin/article_category.html
+++ b/BigNews/admin/article_category.html
@@ -31,14 +31,14 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
+                    <!-- <tr>
                         <td>奇趣事</td>
                         <td>funny</td>
                         <td class="text-center">
                             <a href="javascript:void(0);" data-toggle="modal" class=" btn btn-info btn-xs">编辑</a>
                             <a href="javascript:void(0);" class="btn btn-danger btn-xs">删除</a>
                         </td>
-                    </tr>
+                    </tr> -->
                 </tbody>
                 <tfoot>
                     <tr>
@@ -52,4 +52,79 @@
         </div>
     </div>
 
+    <!-- 模态框 -->
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                  aria-hidden="true">&times;</span></button>
+              <h4 class="modal-title" id="exampleModalLabel">新增分类</h4>
+            </div>
+            <div class="modal-body">
+              <form>
+                <div class="form-group">
+                  <label for="recipient-name" class="control-label">名称:</label>
+                  <input type="text" class="form-control" id="recipient-name">
+                </div>
+                <div class="form-group">
+                  <label for="recipient-name" class="control-label">slug:</label>
+                  <input type="text" class="form-control" id="message-text">
+                </div>
+              </form>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+              <button type="button" class="btn btn-primary" data-dismiss="modal">确定</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    <!-- 导入基地址 -->
+<script src="./libs/hppt.js"></script>
+<script id="article_category" type="text/html">
+    {{each data v}}
+    <tr>
+        <td>{{v.name}}</td>
+        <td>{{v.slug}}</td>
+        <td class="text-center">
+            <a href="javascript:void(0);" data-id="{{v.id}}" data-toggle="modal" data-target="#myModal" class=" btn btn-info btn-xs">编辑</a>
+            <a href="javascript:void(0);" data-id="{{v.id}}" class="btn btn-danger btn-xs btn-delete">删除</a>
+        </td>
+    </tr>
+    {{/each}}
+</script>
+<script>
+    $(function(){
+        $.ajax({
+            url:BigNew.category_list,
+            type:'get',
+            dataType:'json',
+            success: function(backData){
+                // console.log(backData);
+                $('tbody').html(template('article_category',backData))
+            }
+        });
+        $('.btn-primary').click(function(){
+            // e.preventDefault()
+            $.ajax({
+                url:BigNew.category_add,
+                type:'post',
+                dataType:'json',
+                data:{
+                    name:$('#recipient-name').val(),
+                    slug:$('#message-text').val()
+                },
+                success: function(backData){
+                    console.log(backData);
+                    window.parent.location.reload()
+                }
+            });
+            // $('body').on('click','.text-center>a',function(){
+                
+            // })
+        })
+
+    })
+</script>
 </html>
