--- a/BigNews/admin/article_category.html
+++ b/BigNews/admin/article_category.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>文章列表</title>
+    <title>文章类别管理</title>
     <link rel="stylesheet" href="./libs/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/iconfont.css">
@@ -55,34 +55,34 @@
     <!-- 模态框 -->
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
         <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
-                  aria-hidden="true">&times;</span></button>
-              <h4 class="modal-title" id="exampleModalLabel">新增分类</h4>
-            </div>
-            <div class="modal-body">
-              <form>
-                <div class="form-group">
-                  <label for="recipient-name" class="control-label">名称:</label>
-                  <input type="text" class="form-control" id="recipient-name">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span class="delete"
+                            aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="exampleModalLabel">新增分类</h4>
                 </div>
-                <div class="form-group">
-                  <label for="recipient-name" class="control-label">slug:</label>
-                  <input type="text" class="form-control" id="message-text">
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group">
+                            <label for="recipient-name" class="control-label">分类名称:</label>
+                            <input type="text" class="form-control" id="recipient-name">
+                        </div>
+                        <div class="form-group">
+                            <label for="recipient-name" class="control-label">分类别名:</label>
+                            <input type="text" class="form-control" id="message-text">
+                        </div>
+                    </form>
                 </div>
-              </form>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default delete" data-dismiss="modal">取消</button>
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">新增</button>
+                </div>
             </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-              <button type="button" class="btn btn-primary" data-dismiss="modal">确定</button>
-            </div>
-          </div>
         </div>
-      </div>
+    </div>
     <!-- 导入基地址 -->
-<script src="./libs/hppt.js"></script>
-<script id="article_category" type="text/html">
+    <script src="./libs/hppt.js"></script>
+    <script id="article_category" type="text/html">
     {{each data v}}
     <tr>
         <td>{{v.name}}</td>
@@ -94,37 +94,96 @@
     </tr>
     {{/each}}
 </script>
-<script>
-    $(function(){
-        $.ajax({
-            url:BigNew.category_list,
-            type:'get',
-            dataType:'json',
-            success: function(backData){
-                // console.log(backData);
-                $('tbody').html(template('article_category',backData))
-            }
-        });
-        $('.btn-primary').click(function(){
-            // e.preventDefault()
+    <script>
+        $(function () {
             $.ajax({
-                url:BigNew.category_add,
-                type:'post',
-                dataType:'json',
-                data:{
-                    name:$('#recipient-name').val(),
-                    slug:$('#message-text').val()
-                },
-                success: function(backData){
-                    console.log(backData);
-                    window.parent.location.reload()
+                url: BigNew.category_list,
+                type: 'get',
+                dataType: 'json',
+                success: function (backData) {
+                    // console.log(backData);
+                    $('tbody').html(template('article_category', backData))
                 }
             });
-            // $('body').on('click','.text-center>a',function(){
-                
-            // })
+            $('#myModal').on('show.bs.modal', function (e) {
+                // console.log(e.relatedTarget); //dom元素
+                // console.log($(e.relatedTarget).text()); //dom元素
+                if ($(e.relatedTarget).text() == '新增分类') {
+                    // alert('新增')
+                    $('#exampleModalLabel').text('新增分类')
+                    $('.btn-primary').text('新增')
+                } else {
+                    // alert('编辑')
+                    $('#exampleModalLabel').text('编辑分类')
+                    $('.btn-primary').text('保存编辑')
+                    // 名称框添加内容
+                    $('#recipient-name').val($(e.relatedTarget).parent().prev().prev().text())
+                    // 给类别添加内容
+                    $('#message-text').val($(e.relatedTarget).parent().prev().text())
+                    // 给保存编辑添加id
+                    $('.btn-primary').attr('data-id',$(e.relatedTarget).attr('data-id'))
+                }
+            })
+            // 新增和编辑点击事件
+            $('.btn-primary').click(function () {
+                if ($(this).text() == '新增') {
+                    // console.log('新增');
+                    $.ajax({
+                        url: BigNew.category_add,
+                        type: 'post',
+                        dataType: 'json',
+                        data: {
+                            name: $('#recipient-name').val(),
+                            slug: $('#message-text').val(),
+                        },
+                        success: function (backData) {
+                            console.log(backData);
+                            if (backData.code == 201) {
+                                alert(backData.msg)
+                                window.location.reload()
+                            }
+                        }
+                    });
+                }else{
+                    // 编辑文章类别点击事件
+                    $.ajax({
+                        url:BigNew.category_edit,
+                        type:'post',
+                        dataType:'json',
+                        data:{
+                            id:$('.btn-primary').attr('data-id'),
+                            name:$('#recipient-name').val(),
+                            slug: $('#message-text').val(),
+                        },
+                        success: function(backData){
+                            console.log(backData);
+                            alert(backData.msg)
+                            window.location.reload()
+                        }
+                    });
+                }
+            })
+            $('.delete').click(function(){
+                $('#recipient-name').val('')
+                $('#message-text').val('')
+            })
+            $('body').on('click','.btn-delete',function(){
+                // console.log($(this).attr('data-id'));
+                $.ajax({
+                    url:BigNew.category_delete,
+                    type:'post',
+                    dataType:'json',
+                    data:{
+                        id:$(this).attr('data-id'),
+                    },
+                    success: function(backData){
+                        // console.log(backData);
+                        alert(backData.msg)
+                        window.location.reload()
+                    }
+                });
+            })
         })
+    </script>
 
-    })
-</script>
 </html>
