--- a/BigNews/admin/article_release.html
+++ b/BigNews/admin/article_release.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>文章列表</title>
+    <title>发表文章</title>
     <link rel="stylesheet" href="./libs/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/iconfont.css">
@@ -19,7 +19,7 @@
 <body>
     <div class="container-fluid">
         <div class="common_title">
-            文章编辑
+            发表文章
         </div>
         <div class="container-fluid common_con">
             <form class="form-horizontal article_form" id="form">
@@ -41,10 +41,10 @@
                     <div class="col-sm-4">
                         <select class="form-control category" name="categoryId">
                             <option>类别一</option>
-                            <option>类别二</option>
+                            <!-- <option>类别二</option>
                             <option>类别三</option>
                             <option selected>类别四</option>
-                            <option>类别五</option>
+                            <option>类别五</option> -->
                         </select>
                     </div>
                 </div>
@@ -67,6 +67,31 @@
             </form>
         </div>
     </div>
+<script src="./libs/hppt.js"></script>
+<script id="categoryId" type="text/html">
+    {{each data v}}
+        <option value="{{v.id}}">{{v.name}}</option>
+    {{/each}}
+</script>
+<script>
+    $(function(){
+        $.ajax({
+                url:BigNew.category_list,
+                type:'get',
+                dataType:'json',
+                success: function(backData){
+                    console.log(backData);
+                    $('select').html(template('categoryId',backData))
+                }
+            });
+            $('#inputCover').change(function(e){
+                var file=this.files[0]
+                console.log(file);
+                // var url=URL.createObjectURL(file)
+                $('.article_cover').attr('src',URL.createObjectURL(file))
+            })
+    })
+</script>
 </body>
 
 </html>
