--- a/BigNews/admin/article_category.html
+++ b/BigNews/admin/article_category.html
@@ -25,8 +25,8 @@
             <table class="table table-striped table-bordered table-hover mp20 category_table">
                 <thead>
                     <tr>
-                        <th>名称</th>
-                        <th>Slug</th>
+                        <th>分类名称</th>
+                        <th>分类别名</th>
                         <th class="text-center" width="100">操作</th>
                     </tr>
                 </thead>
