--- a/BigNews/admin/article_edit.html
+++ b/BigNews/admin/article_edit.html
@@ -40,17 +40,19 @@
                     <label for="inputCategory" class="col-sm-2 control-label">文章类别：</label>
                     <div class="col-sm-4">
                         <select class="form-control category" name="categoryId">
-                            <option>类别一</option>
+                            <!-- <option>类别一</option>
                             <option>类别二</option>
                             <option>类别三</option>
                             <option selected>类别四</option>
-                            <option>类别五</option>
+                            <option>类别五</option> -->
                         </select>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-sm-2 control-label">发布时间：</label>
                     <div class="col-sm-4">
+                        <!-- 导入分页插件 -->
+                        <ul id="pagination-demo" class="pagination-sm"></ul>
                     </div>
                 </div>
                 <div class="form-group">
@@ -117,34 +119,34 @@
                 // (4)设置img标签src属性生成的url
                 $('.article_cover').attr('src', url)
             })
-            // $('.btn-success').click(function (e) {
-            //     e.preventDefault()
-            //     var fd = new FormData($('form')[0]);
-            //     // console.log(fd);
-            //     $.ajax({
-            //         // 用户编辑
-            //         url: BigNew.user_publish,
-            //         type: 'post',
-            //         dataType: 'json',
-            //         data: fd,
-            //         processData: false,
-            //         contentType: false,
-            //         success: function (backData) {
-            //             console.log(backData);
-            //             // if (backData.code == 200) {
-            //             //     $('#myModal').modal()
-            //             //     $('.modal-body>p').text(backData.msg)
-            //             //     $('#myModal').on('hidden.bs.modal', function (e) {
-            //             //     /*注意点
-            //             //     window: 当前页面 user.html,
-            //             //     如果想要使用 window.parent,这种方法一般用于获取iframe标签的父窗口
-            //             //     */
-            //             //         window.parent.location.reload()
-            //             //     })
-            //             // }
-            //         }
-            //     });
-            // })
+            $('.btn-success').click(function (e) {
+                e.preventDefault()
+                var fd = new FormData($('form')[0]);
+                // console.log(fd);
+                $.ajax({
+                    // 用户编辑
+                    url: BigNew.user_publish,
+                    type: 'post',
+                    dataType: 'json',
+                    data: fd,
+                    processData: false,
+                    contentType: false,
+                    success: function (backData) {
+                        console.log(backData);
+                        if (backData.code == 200) {
+                            $('#myModal').modal()
+                            $('.modal-body>p').text(backData.msg)
+                            $('#myModal').on('hidden.bs.modal', function (e) {
+                            /*注意点
+                            window: 当前页面 user.html,
+                            如果想要使用 window.parent,这种方法一般用于获取iframe标签的父窗口
+                            */
+                                window.parent.location.reload()
+                            })
+                        }
+                    }
+                });
+            })
         })
     </script>
 </body>
