--- a/BigNews/admin/article_list.html
+++ b/BigNews/admin/article_list.html
@@ -128,7 +128,7 @@
                         perpage: 10,
                     },
                     success: function (backData) {
-                        console.log(backData);
+                        // console.log(backData);
                         $('tbody').html(template('article_query', backData))
                         // 加载分页插件
                         // (1)先销毁旧的插件
