--- a/BigNews/admin/comment_list.html
+++ b/BigNews/admin/comment_list.html
@@ -11,7 +11,10 @@
   <link rel="stylesheet" href="css/iconfont.css">
   <link rel="stylesheet" href="css/main.css">
   <script src="./libs/jquery-1.12.4.min.js"></script>
+  <!-- 模板引擎 -->
   <script src="./libs/template-web.js"></script>
+  <!-- 分页插件 -->
+  <script src="./libs/jquery.twbsPagination.js"></script>
 </head>
 
 <body>
@@ -142,7 +145,7 @@
         </tbody>
       </table>
       <div class="row text-center">
-        <ul class="pagination pagination-sm">
+        <!-- <ul class="pagination pagination-sm">
           <li class="page-item first disabled"><a href="#" class="page-link">首页</a></li>
           <li class="page-item prev disabled"><a href="#" class="page-link">上一页</a></li>
           <li class="page-item active"><a href="#" class="page-link">1</a></li>
@@ -154,41 +157,115 @@
           <li class="page-item"><a href="#" class="page-link">7</a></li>
           <li class="page-item next"><a href="#" class="page-link">下一页</a></li>
           <li class="page-item last"><a href="#" class="page-link">尾页</a></li>
-        </ul>
+        </ul> -->
         <ul id="pagination" class="pagination-sm"></ul>
       </div>
-
     </div>
   </div>
+  <!-- 网络中间层 -->
   <script src="./libs/hppt.js"></script>
   <!-- 评论列表模板 -->
-  <script id="comments" type="text/html">
+  <script id="com_list" type="text/html">
     {{each data.data v}}
+    {{if v.state=='待审核'}}
+    <tr class="danger">
+    {{else}}
     <tr>
+    {{/if}}
       <td>{{v.author}}</td>
       <td>{{v.content}}</td>
-      <td>{{v.tiltle}}</td>
+      <td>《{{v.title}}》</td>
       <td>{{v.date}}</td>
       <td>{{v.state}}</td>
       <td class="text-center">
-        <a href="javascript:void(0);;" class="btn btn-warning btn-xs">拒绝</a>
-        <a href="javascript:void(0);;" class="btn btn-danger btn-xs">删除</a>
+        {{if v.state=='已通过'}}
+        <a href="javascript:void(0);;" data-id='{{v.id}}' class="btn btn-warning btn-xs">拒绝</a>
+        {{else if v.state=='待审核'}}
+        <a href="javascript:void(0);;" data-id='{{v.id}}' class="btn btn-info btn-xs">批准</a>
+        {{/if}}
+        <a href="javascript:void(0);;" data-id='{{v.id}}' class="btn btn-danger btn-xs">删除</a>
       </td>
     </tr>
     {{/each}}
   </script>
   <script>
-    $(function(){
+    $(function () {
       // 请求评论列表
       $.ajax({
-        url:BigNew.comment_list,
-        type:'get',
-        dataType:'json',
-        success: function(backData){
-          console.log(backData);
-          $('tbody').html(template('comments',backData))
+        url: BigNew.comment_list,
+        type: 'get',
+        dataType: 'json',
+        data: {
+          page: 1,
+          perpage: 10
+        },
+        success: function (backData) {
+          // console.log(backData);
+          $('tbody').html(template('com_list', backData))
+          // 初始化分页插件
+          $('#pagination').twbsPagination('destroy')
+          $('#pagination').twbsPagination({
+            totalPages: backData.data.totalPage,//总页数
+            startPage: 1,//起始页
+            visiblePages: 6,//可见页数
+            first: '首页',
+            prev: '上一页',
+            next: '下一页',
+            last: '尾页',
+            onPageClick: function (event, page) {//页码点击事件
+              $('#page-content').text('Page ' + page);
+              // console.log(page);//当前点击页   
+              getCommentList(page)
+            }
+          });
         }
       });
+      function getCommentList(page) {
+        $.ajax({
+          url: BigNew.comment_list,
+          type: 'get',
+          dataType: 'json',
+          data: {
+            page: page,
+            perpage: 10
+          },
+          success: function (backData) {
+            // console.log(backData);
+            $('tbody').html(template('com_list', backData))
+          }
+        });
+      }
+      // 注册委托事件获取按钮
+      $('body').on('click','.btn-info,.btn-warning,.btn-danger',function(){
+        // console.log($(this).attr('class'));
+        switch(true){
+          // 通过
+          case $(this).hasClass('btn-info'):
+            var url=BigNew.comment_pass
+            break;
+          // 拒绝
+          case $(this).hasClass('btn-warning'):
+            var url=BigNew.comment_reject
+            break;
+          // 删除
+          default:
+            var url=BigNew.comment_delete
+            break;
+        }
+        $.ajax({
+          url:url,
+          type:'post',
+          dataType:'json',
+          data:{
+            id:$(this).attr('data-id')
+          },
+          success: function(backData){
+            console.log(backData);
+            alert(backData.msg)
+            window.location.reload()
+          }
+        });
+      })
     })
   </script>
 </body>
