--- a/BigNews/index.html
+++ b/BigNews/index.html
@@ -227,7 +227,13 @@
     <script src="./js/template-web.js"></script>
     <!-- 引入jq文件 -->
     <script src="./js/jquery-1.12.4.min.js"></script>
-    
+    <script>
+        // 1.首页焦点图
+
+        // 2.文章类型
+
+        // 3.
+    </script>
 </body>
 
 </html>
