--- a/BigNews/article.html
+++ b/BigNews/article.html
@@ -27,24 +27,24 @@
     <div class="menu_con">
         <div class="menu">
             <div class="menu_collapse fl">
-                <a href="javascript:;" class="level_one"><i class="fa fa-list-ul"></i>全部分类</a>
+                <a href="./list.html" class="level_one"><i class="fa fa-list-ul"></i>全部分类</a>
                 <ul class="level_two">
-                    <li class="up"></li>
+                    <!-- <li class="up"></li>
                     <li><a href="#">最 新</a></li>
                     <li><a href="#">科 技</a></li>
                     <li><a href="#">股 市</a></li>
                     <li><a href="#">商 品</a></li>
                     <li><a href="#">外 汇</a></li>
-                    <li><a href="#">公 司</a></li>
+                    <li><a href="#">公 司</a></li> -->
                 </ul>
             </div>
             <ul class="left_menu fl">
-                <li><a href="#">最 新</a></li>
+                <!-- <li><a href="#">最 新</a></li>
                 <li><a href="#">科 技</a></li>
                 <li><a href="#">股 市</a></li>
                 <li><a href="#">商 品</a></li>
                 <li><a href="#">外 汇</a></li>
-                <li><a href="#">公 司</a></li>
+                <li><a href="#">公 司</a></li> -->
             </ul>
             <ul class="right_menu fr">
                 <li><a href="#">科技专题</a></li>
@@ -55,10 +55,10 @@
 
     <div class="main_con clearfix">
         <div class="left_con setfr">
-            <div class="breadcrumb">
-                当前位置： <a href="#">首页</a> &gt; <a href="#">科技</a> &gt; 文章详情
-            </div>
             <div class="index_article">
+            <!-- <div class="breadcrumb">
+                当前位置： <a href="./index.html">首页</a> &gt; <a href="javascript:;">科技</a> &gt; 文章详情
+            </div> -->
                 <!-- <h3 class="article_title">马斯克的新花样？连接人脑和电脑的初创公司又筹了一笔钱</h3>
                 <div class="article_info">杰克 发布于 2019-05-08 07:08:46&nbsp;&nbsp;&nbsp;分类: 奇趣事&nbsp;&nbsp;&nbsp;阅读:
                     (98)&nbsp;&nbsp;&nbsp;评论: (0)</div>
@@ -213,15 +213,21 @@
     <script src="./js/jquery-1.12.4.min.js"></script>
     <!-- 1.文章内容详情 -->
     <script id="index_article" type="text/html">
+        <div class="breadcrumb">
+            当前位置： <a href="./index.html">首页</a> &gt; <a href="./list.html?id={{data.categoryId}}">{{data.category}}</a> &gt; 文章详情
+        </div>
         <h3 class="article_title">{{data.title}}</h3>
         <div class="article_info">{{data.author}} 发布于 {{data.date}}&nbsp;&nbsp;&nbsp;分类: {{data.category}}&nbsp;&nbsp;&nbsp;阅读:
             ({{data.read}})&nbsp;&nbsp;&nbsp;评论: ({{data.comments}})</div>
         <div class="article_con">
-            {{data.content}}
+            {{@ data.content}}
         </div>
         <div class="article_links">
+            {{if data.prev}}
             上一篇： <a href="./article.html?id='{{data.prev.id}}'">{{data.prev.title}}</a><br>
+            {{else if data.next}}
             下一篇： <a href="./article.html?id='{{data.next.id}}'">{{data.next.title}}</a>
+            {{/if}}
         </div>
     </script>
     <!-- 2.评论列表 -->
@@ -240,11 +246,76 @@
         </div>
         {{/each}}
     </script>
+    <!-- 5.热门排行榜 -->
+    <script id="common_wrap1" type="text/html">
+        {{each data v}}
+        <li>
+        {{if $index==0}}
+        <span class="first">{{$index+1}}
+        {{else if $index==1}}
+        <span class="second">{{$index+1}}
+        {{else if $index==2}}
+        <span class="third">{{$index+1}}
+        {{else}}
+        <span>{{$index+1}}
+        {{/if}}
+        </span><a href="./article.html?id={{v.id}}">{{v.title}}</a></li>
+        {{/each}}
+    </script>
+    <!-- 6.最新评论 -->
+    <script id="common_wrap2" type="text/html">
+        {{each data v}}
+            <li>
+                <span>{{v.author[0]}}</span>
+                <b><em>{{v.author}}</em> {{v.date}}说:</b>
+                <strong>{{v.intro}}</strong>
+            </li>
+        {{/each}}
+    </script>
+    <!-- 7.焦点关注 -->
+    <script id="common_wrap3" type="text/html">
+        {{each data v}}
+            <li><a href="javascript:;">{{v.intro}}</a></li>
+        {{/each}}
+    </script>
+    <!-- 8.文章类型 -->
+<script id="level_two" type="text/html">
+    <li class="up"></li>
+    {{each data v}}
+    <li><a href="./list.html?id={{v.id}}">{{v.name}}</a></li>
+    {{/each}}
+</script>
     <script>
         // 获取当前页id
         var articleId = window.location.href.split('=')[1]
         // console.log(articleId);
 
+        // 1.文章内容详情
+        $.ajax({
+            url: 'http://localhost:8080/api/v1/index/article',
+            type: 'get',
+            dataType: 'json',
+            data: {
+                id: articleId
+            },
+            success: function (backData) {
+                console.log(backData);
+                $('.index_article').html(template('index_article', backData))
+            }
+        });
+        // 2.评论列表
+        $.ajax({
+            url: 'http://localhost:8080/api/v1/index/get_comment',
+            type: 'get',
+            dataType: 'json',
+            data: {
+                articleId: articleId
+            },
+            success: function (backData) {
+                // console.log(backData);
+                $('.get_comment').html(template('get_comment', backData))
+            }
+        });
         // 3.发表评论
         // console.log($('.comment_name').val());
         // console.log($('.comment_input').val());
@@ -267,49 +338,65 @@
             });
         })
         // 4.文章搜索
-        $('.search_btn').click(function () {
-            $.ajax({
-                url: 'http://localhost:8080/api/v1/index/search',
-                type: 'get',
-                dataType: 'json',
-                data: {
-                    key: $('.search_txt').val(),
-                    type: '',
-                    page: '',
-                    perpage: ''
-                },
-                success: function (backData) {
-                    console.log(backData);
-                    // 1.文章内容详情
-                    $.ajax({
-                        url: 'http://localhost:8080/api/v1/index/article',
-                        type: 'get',
-                        dataType: 'json',
-                        data: {
-                            id: articleId
-                        },
-                        success: function (backData) {
-                            // console.log(backData);
-                            $('.index_article').html(template('index_article', backData))
-                        }
-                    });
-                    // 2.评论列表
-                    $.ajax({
-                        url: 'http://localhost:8080/api/v1/index/get_comment',
-                        type: 'get',
-                        dataType: 'json',
-                        data: {
-                            articleId: articleId
-                        },
-                        success: function (backData) {
-                            // console.log(backData);
-                            $('.get_comment').html(template('get_comment', backData))
-                        }
-                    });
-                }
-            });
-        })
-        $('.search_btn').click()
+        // $('.search_btn').click(function () {
+        //     $.ajax({
+        //         url: 'http://localhost:8080/api/v1/index/search',
+        //         type: 'get',
+        //         dataType: 'json',
+        //         data: {
+        //             key: $('.search_txt').val(),
+        //             type: '',
+        //             page: '',
+        //             perpage: ''
+        //         },
+        //         success: function (backData) {
+        //             console.log(backData);
+
+        //         }
+        //     });
+        // })
+        // 5.热门排行
+        $.ajax({
+            url:'http://localhost:8080/api/v1/index/rank',
+            type:'get',
+            dataType:'json',
+            success: function(backData){
+                // console.log(backData);
+                $('.common_wrap:eq(0)>ul').html(template('common_wrap1',backData))
+            }
+        });
+        // 6.最新评论
+        // console.log($('common_wrap:eq(1)>ul'));
+        $.ajax({
+            url:'http://localhost:8080/api/v1/index/latest_comment',
+            type:'get',
+            dataType:'json',
+            success: function(backData){
+                // console.log(backData);
+                $('.common_wrap:eq(1)>ul').html(template('common_wrap2',backData))
+            }
+        });
+        // 7.焦点关注
+        $.ajax({
+            url:'http://localhost:8080/api/v1/index/attention',
+            type:'get',
+            dataType:'json',
+            success: function(backData){
+                // console.log(backData);
+                $('.common_wrap:eq(2)>ul').html(template('common_wrap3',backData))
+            }
+        });
+        // 8.文章类型
+        $.ajax({
+            url: 'http://localhost:8080/api/v1/index/category',
+            type: 'get',
+            dataType: 'json',
+            success: function (backData) {
+                // console.log(backData);
+                $('.level_two').html(template('level_two', backData))
+                $('.left_menu').html(template('level_two', backData))
+            }
+        });
     </script>
 </body>
 
