--- a/BigNews/list.html
+++ b/BigNews/list.html
@@ -30,15 +30,15 @@
     <div class="menu_con">
         <div class="menu">
             <div class="menu_collapse fl">
-                <a href="javascript:;" class="level_one"><i class="fa fa-list-ul"></i>全部分类</a>
+                <a href="./list.html" class="level_one"><i class="fa fa-list-ul"></i>全部分类</a>
                 <ul class="level_two">
-                    <li class="up"></li>
+                    <!-- <li class="up"></li>
                     <li><a href="#">最 新</a></li>
                     <li><a href="#">科 技</a></li>
                     <li><a href="#">股 市</a></li>
                     <li><a href="#">商 品</a></li>
                     <li><a href="#">外 汇</a></li>
-                    <li><a href="#">公 司</a></li>
+                    <li><a href="#">公 司</a></li> -->
                 </ul>
             </div>
             <ul class="left_menu fl">
@@ -58,83 +58,83 @@
 
     <div class="main_con clearfix">
         <div class="left_con setfr">
-
             <div class="list_title">
                 <h3>科 技</h3>
             </div>
+            <!-- 文章搜索 -->
+            <div class="index_search">
+                <div class="common_news_list">
+                    <a href="#" class="list_pic"><img src="images/pic09.jpg" alt=""></a>
+                    <h4><a href="#">亚马逊金融试水中国？背后却是和华尔街的“金融战争” </a></h4>
+                    <p>亚马逊抛弃了中国的买家们，却难以割舍庞大的卖家市场，有消息指出亚马逊中国将针对中国庞大的卖家群体推出一项贷款推荐计划。在连续对印度、墨西哥等新兴市场大力推广线上支付服务后，亚马逊金融试水进军中国市场的信号终于被放出。
+                    </p>
+                    <div class="new_info">
+                        <span>标签：财经&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<i class="fa fa-eye"></i>&nbsp;阅读( 5
+                            )&nbsp;&nbsp;&nbsp;<i class="fa fa-commenting"></i>&nbsp;评论( 10 )</span>
+                        <b>发布于 2018-08-30 12:18:58</b>
+                    </div>
+                </div>
 
-            <div class="common_news_list">
-                <a href="#" class="list_pic"><img src="images/pic09.jpg" alt=""></a>
-                <h4><a href="#">亚马逊金融试水中国？背后却是和华尔街的“金融战争” </a></h4>
-                <p>亚马逊抛弃了中国的买家们，却难以割舍庞大的卖家市场，有消息指出亚马逊中国将针对中国庞大的卖家群体推出一项贷款推荐计划。在连续对印度、墨西哥等新兴市场大力推广线上支付服务后，亚马逊金融试水进军中国市场的信号终于被放出。
-                </p>
-                <div class="new_info">
-                    <span>标签：财经&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<i class="fa fa-eye"></i>&nbsp;阅读( 5
-                        )&nbsp;&nbsp;&nbsp;<i class="fa fa-commenting"></i>&nbsp;评论( 10 )</span>
-                    <b>发布于 2018-08-30 12:18:58</b>
+                <div class="common_news_list">
+                    <a href="#" class="list_pic"><img src="images/pic03.jpg" alt=""></a>
+                    <h4><a href="#">马斯克的新花样？连接人脑和电脑的初创公司又筹了一笔钱,马斯克的新花样？连接人脑和电脑的初创公司又筹了一笔钱</a></h4>
+                    <p>亚马逊抛弃了中国的买家们，却难以割舍庞大的卖家市场，有消息指出亚马逊中国将针对中国庞大的卖家群体推出一项贷款推荐计划。在连续对印度、墨西哥等新兴市场大力推广线上支付服务后，亚马逊金融试水进军中国市场的信号终于被放出。
+                    </p>
+                    <div class="new_info">
+                        <span>标签：财经&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<i class="fa fa-eye"></i>&nbsp;阅读( 5
+                            )&nbsp;&nbsp;&nbsp;<i class="fa fa-commenting"></i>&nbsp;评论( 10 )</span>
+                        <b>发布于 2018-08-30 12:18:58</b>
+                    </div>
+                </div>
+
+                <div class="common_news_list">
+                    <a href="#" class="list_pic"><img src="images/pic05.jpg" alt=""></a>
+                    <h4><a href="#">马斯克的新花样？连接人脑和电脑的初创公司又筹了一笔钱</a></h4>
+                    <p>亚马逊抛弃了中国的买家们，却难以割舍庞大的卖家市场，有消息指出亚马逊中国将针对中国庞大的卖家群体推出一项贷款推荐计划。在连续对印度、墨西哥等新兴市场大力推广线上支付服务后，亚马逊金融试水进军中国市场的信号终于被放出。
+                    </p>
+                    <div class="new_info">
+                        <span>标签：财经&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<i class="fa fa-eye"></i>&nbsp;阅读( 5
+                            )&nbsp;&nbsp;&nbsp;<i class="fa fa-commenting"></i>&nbsp;评论( 10 )</span>
+                        <b>发布于 2018-08-30 12:18:58</b>
+                    </div>
+                </div>
+
+                <div class="common_news_list">
+                    <a href="#" class="list_pic"><img src="images/pic07.jpg" alt=""></a>
+                    <h4><a href="#">马斯克的新花样？连接人脑和电脑的初创公司又筹了一笔钱</a></h4>
+                    <p>亚马逊抛弃了中国的买家们，却难以割舍庞大的卖家市场，有消息指出亚马逊中国将针对中国庞大的卖家群体推出一项贷款推荐计划。在连续对印度、墨西哥等新兴市场大力推广线上支付服务后，亚马逊金融试水进军中国市场的信号终于被放出。
+                    </p>
+                    <div class="new_info">
+                        <span>标签：财经&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<i class="fa fa-eye"></i>&nbsp;阅读( 5
+                            )&nbsp;&nbsp;&nbsp;<i class="fa fa-commenting"></i>&nbsp;评论( 10 )</span>
+                        <b>发布于 2018-08-30 12:18:58</b>
+                    </div>
+                </div>
+
+                <div class="common_news_list">
+                    <a href="#" class="list_pic"><img src="images/pic10.jpg" alt=""></a>
+                    <h4><a href="#">马斯克的新花样？连接人脑和电脑的初创公司又筹了一笔钱</a></h4>
+                    <p>亚马逊抛弃了中国的买家们，却难以割舍庞大的卖家市场，有消息指出亚马逊中国将针对中国庞大的卖家群体推出一项贷款推荐计划。在连续对印度、墨西哥等新兴市场大力推广线上支付服务后，亚马逊金融试水进军中国市场的信号终于被放出。
+                    </p>
+                    <div class="new_info">
+                        <span>标签：财经&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<i class="fa fa-eye"></i>&nbsp;阅读( 5
+                            )&nbsp;&nbsp;&nbsp;<i class="fa fa-commenting"></i>&nbsp;评论( 10 )</span>
+                        <b>发布于 2018-08-30 12:18:58</b>
+                    </div>
+                </div>
+
+                <div class="common_news_list">
+                    <a href="#" class="list_pic"><img src="images/pic04.jpg" alt=""></a>
+                    <h4><a href="#">马斯克的新花样？连接人脑和电脑的初创公司又筹了一笔钱</a></h4>
+                    <p>亚马逊抛弃了中国的买家们，却难以割舍庞大的卖家市场，有消息指出亚马逊中国将针对中国庞大的卖家群体推出一项贷款推荐计划。在连续对印度、墨西哥等新兴市场大力推广线上支付服务后，亚马逊金融试水进军中国市场的信号终于被放出。
+                    </p>
+                    <div class="new_info">
+                        <span>标签：财经&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<i class="fa fa-eye"></i>&nbsp;阅读( 5
+                            )&nbsp;&nbsp;&nbsp;<i class="fa fa-commenting"></i>&nbsp;评论( 10 )</span>
+                        <b>发布于 2018-08-30 12:18:58</b>
+                    </div>
                 </div>
             </div>
-
-            <div class="common_news_list">
-                <a href="#" class="list_pic"><img src="images/pic03.jpg" alt=""></a>
-                <h4><a href="#">马斯克的新花样？连接人脑和电脑的初创公司又筹了一笔钱,马斯克的新花样？连接人脑和电脑的初创公司又筹了一笔钱</a></h4>
-                <p>亚马逊抛弃了中国的买家们，却难以割舍庞大的卖家市场，有消息指出亚马逊中国将针对中国庞大的卖家群体推出一项贷款推荐计划。在连续对印度、墨西哥等新兴市场大力推广线上支付服务后，亚马逊金融试水进军中国市场的信号终于被放出。
-                </p>
-                <div class="new_info">
-                    <span>标签：财经&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<i class="fa fa-eye"></i>&nbsp;阅读( 5
-                        )&nbsp;&nbsp;&nbsp;<i class="fa fa-commenting"></i>&nbsp;评论( 10 )</span>
-                    <b>发布于 2018-08-30 12:18:58</b>
-                </div>
-            </div>
-
-            <div class="common_news_list">
-                <a href="#" class="list_pic"><img src="images/pic05.jpg" alt=""></a>
-                <h4><a href="#">马斯克的新花样？连接人脑和电脑的初创公司又筹了一笔钱</a></h4>
-                <p>亚马逊抛弃了中国的买家们，却难以割舍庞大的卖家市场，有消息指出亚马逊中国将针对中国庞大的卖家群体推出一项贷款推荐计划。在连续对印度、墨西哥等新兴市场大力推广线上支付服务后，亚马逊金融试水进军中国市场的信号终于被放出。
-                </p>
-                <div class="new_info">
-                    <span>标签：财经&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<i class="fa fa-eye"></i>&nbsp;阅读( 5
-                        )&nbsp;&nbsp;&nbsp;<i class="fa fa-commenting"></i>&nbsp;评论( 10 )</span>
-                    <b>发布于 2018-08-30 12:18:58</b>
-                </div>
-            </div>
-
-            <div class="common_news_list">
-                <a href="#" class="list_pic"><img src="images/pic07.jpg" alt=""></a>
-                <h4><a href="#">马斯克的新花样？连接人脑和电脑的初创公司又筹了一笔钱</a></h4>
-                <p>亚马逊抛弃了中国的买家们，却难以割舍庞大的卖家市场，有消息指出亚马逊中国将针对中国庞大的卖家群体推出一项贷款推荐计划。在连续对印度、墨西哥等新兴市场大力推广线上支付服务后，亚马逊金融试水进军中国市场的信号终于被放出。
-                </p>
-                <div class="new_info">
-                    <span>标签：财经&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<i class="fa fa-eye"></i>&nbsp;阅读( 5
-                        )&nbsp;&nbsp;&nbsp;<i class="fa fa-commenting"></i>&nbsp;评论( 10 )</span>
-                    <b>发布于 2018-08-30 12:18:58</b>
-                </div>
-            </div>
-
-            <div class="common_news_list">
-                <a href="#" class="list_pic"><img src="images/pic10.jpg" alt=""></a>
-                <h4><a href="#">马斯克的新花样？连接人脑和电脑的初创公司又筹了一笔钱</a></h4>
-                <p>亚马逊抛弃了中国的买家们，却难以割舍庞大的卖家市场，有消息指出亚马逊中国将针对中国庞大的卖家群体推出一项贷款推荐计划。在连续对印度、墨西哥等新兴市场大力推广线上支付服务后，亚马逊金融试水进军中国市场的信号终于被放出。
-                </p>
-                <div class="new_info">
-                    <span>标签：财经&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<i class="fa fa-eye"></i>&nbsp;阅读( 5
-                        )&nbsp;&nbsp;&nbsp;<i class="fa fa-commenting"></i>&nbsp;评论( 10 )</span>
-                    <b>发布于 2018-08-30 12:18:58</b>
-                </div>
-            </div>
-
-            <div class="common_news_list">
-                <a href="#" class="list_pic"><img src="images/pic04.jpg" alt=""></a>
-                <h4><a href="#">马斯克的新花样？连接人脑和电脑的初创公司又筹了一笔钱</a></h4>
-                <p>亚马逊抛弃了中国的买家们，却难以割舍庞大的卖家市场，有消息指出亚马逊中国将针对中国庞大的卖家群体推出一项贷款推荐计划。在连续对印度、墨西哥等新兴市场大力推广线上支付服务后，亚马逊金融试水进军中国市场的信号终于被放出。
-                </p>
-                <div class="new_info">
-                    <span>标签：财经&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<i class="fa fa-eye"></i>&nbsp;阅读( 5
-                        )&nbsp;&nbsp;&nbsp;<i class="fa fa-commenting"></i>&nbsp;评论( 10 )</span>
-                    <b>发布于 2018-08-30 12:18:58</b>
-                </div>
-            </div>
-
             <div id="pagination" class="page"></div>
             <script>
                 $(function () {
@@ -147,8 +147,9 @@
                     });
                 });
             </script>
-
         </div>
+
+
         <div class="right_con setfl">
             <div class="common_wrap">
                 <h3><i class="fa fa-bar-chart"></i> 一周热门排行</h3>
@@ -227,6 +228,170 @@
     </div>
     <!-- 导包template -->
     <script src="./js/template-web.js"></script>
+    <!-- 1.文章类型1 -->
+<script id="level_two" type="text/html">
+    <li class="up"></li>
+    <li><a href="javascript:;">最 新</a></li>
+    {{each data v}}
+    <li><a href="./list.html?id={{v.id}}">{{v.name}}</a></li>
+    {{/each}}
+</script>
+    <!-- 2.热门排行榜 -->
+    <script id="common_wrap1" type="text/html">
+    {{each data v}}
+    <li>
+    {{if $index==0}}
+    <span class="first">{{$index+1}}
+    {{else if $index==1}}
+    <span class="second">{{$index+1}}
+    {{else if $index==2}}
+    <span class="third">{{$index+1}}
+    {{else}}
+    <span>{{$index+1}}
+    {{/if}}
+    </span><a href="./article.html?id={{v.id}}">{{v.title}}</a></li>
+    {{/each}}
+</script>
+    <!-- 3.最新评论 -->
+    <script id="common_wrap2" type="text/html">
+    {{each data v}}
+        <li>
+            <span>{{v.author[0]}}</span>
+            <b><em>{{v.author}}</em> {{v.date}}说:</b>
+            <strong>{{v.intro}}</strong>
+        </li>
+    {{/each}}
+</script>
+    <!-- 4.焦点关注 -->
+    <script id="common_wrap3" type="text/html">
+    {{each data v}}
+        <li><a href="javascript:;">{{v.intro}}</a></li>
+    {{/each}}
+</script>
+    <!-- 5.文章搜索 -->
+    <script id="index_search" type="text/html">
+    {{each data.data v}}
+    <div class="common_news_list">
+        <a href="./article.html?id={{v.id}}" class="list_pic"><img src="{{v.cover}}" alt=""></a>
+        <h4><a href="#">{{v.title}}</a></h4>
+        <p>{{v.content}}</p>
+        <div class="new_info">
+            <span>标签：{{v.category}}&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<i class="fa fa-eye"></i>&nbsp;阅读({{v.read}})&nbsp;&nbsp;&nbsp;<i class="fa fa-commenting"></i>&nbsp;评论({{v.comments}})</span>
+            <b>发布于 {{v.date}}</b>
+        </div>
+    </div>
+    {{/each}}
+</script>
+<!-- 7.最新资讯 -->
+<script id="index_latest" type="text/html">
+    {{each data v}}
+    <div class="common_news_list">
+        <a href="./article.html?id={{v.id}}" class="list_pic"><img src="{{v.cover}}" alt=""></a>
+        <h4><a href="#">{{v.title}}</a></h4>
+        <p>{{v.content}}</p>
+        <div class="new_info">
+            <span>标签：{{v.category}}&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<i class="fa fa-eye"></i>&nbsp;阅读({{v.read}})&nbsp;&nbsp;&nbsp;<i class="fa fa-commenting"></i>&nbsp;评论({{v.comments}})</span>
+            <b>发布于 {{v.date}}</b>
+        </div>
+    </div>
+    {{/each}}
+</script>
+    <script>
+        var list_id = window.location.href.split('=')[1]
+        // 1.文章类型
+        $.ajax({
+            url: 'http://localhost:8080/api/v1/index/category',
+            type: 'get',
+            dataType: 'json',
+            success: function (backData) {
+                // console.log(backData);
+                $('.level_two').html(template('level_two', backData))
+                $('.left_menu').html(template('level_two', backData))
+            }
+        });
+        // 2.热门排行
+        $.ajax({
+            url: 'http://localhost:8080/api/v1/index/rank',
+            type: 'get',
+            dataType: 'json',
+            success: function (backData) {
+                // console.log(backData);
+                $('.common_wrap:eq(0)>ul').html(template('common_wrap1', backData))
+            }
+        });
+        // 3.最新评论
+        $.ajax({
+            url: 'http://localhost:8080/api/v1/index/latest_comment',
+            type: 'get',
+            dataType: 'json',
+            success: function (backData) {
+                // console.log(backData);
+                $('.common_wrap:eq(1)>ul').html(template('common_wrap2', backData))
+            }
+        });
+        // 4.焦点关注
+        $.ajax({
+            url: 'http://localhost:8080/api/v1/index/attention',
+            type: 'get',
+            dataType: 'json',
+            success: function (backData) {
+                // console.log(backData);
+                $('.common_wrap:eq(2)>ul').html(template('common_wrap3', backData))
+            }
+        });
+        // 5.文章搜索
+        $('.search_btn').click(function () {
+            $.ajax({
+                url: 'http://localhost:8080/api/v1/index/search',
+                type: 'get',
+                dataType: 'json',
+                data: {
+                    key: $('.search_txt').val(),
+                    type: list_id,
+                    page: '',
+                    perpage: ''
+                },
+                success: function (backData) {
+                    console.log(backData);
+                    $('.index_search').html(template('index_search', backData))
+                }
+            });
+        })
+        // 默认加载一次
+        $('.search_btn').click()
+        // 6.文章内容详情
+        $.ajax({
+            url: 'http://localhost:8080/api/v1/index/article',
+            type: 'get',
+            dataType: 'json',
+            data: {
+                id: list_id
+            },
+            success: function (backData) {
+                // console.log(backData);
+                if (backData.code == '200') {
+                    $('.list_title>h3').text(backData.data.category)
+                } else {
+                    $('.list_title>h3').text('全部分类')
+                }
+            }
+        });
+        // 7.最新资讯
+        $('body').on('click', $('.level_two>li:eq(1)'), function () {
+        // $('body').on('click', '.left_menu>li:eq(1)', function () {
+            $.ajax({
+                url: 'http://localhost:8080/api/v1/index/latest',
+                type: 'get',
+                dataType: 'json',
+                success: function (backData) {
+                    console.log(backData);
+                    $('.index_search').html(template('index_latest',backData))
+                    $('.list_title>h3').text('最新资讯')
+                }
+            });
+        })
+        // $('.left_menu>li:eq(1)').trigger('click')
+    </script>
 </body>
 
 </html>
